# TinyVersatilePoseGraphSLAM

./: .gitmodules  CMakeLists.txt  LICENSE
examples/: example.cpp
include/: TinyVersatilePoseGraphSLAM.h
src/: TinyVersatilePoseGraphSLAM.cpp  TinyVersatilePoseGraphSLAM_AtPA_AtPb.cpp  TinyVersatilePoseGraphSLAM_AtPA_AtPb_Quaternion.cpp  TinyVersatilePoseGraphSLAM_AtPA_AtPb_Rodrigues.cpp  TinyVersatilePoseGraphSLAM_AtPA_AtPb_TaitBryan.cpp  TinyVersatilePoseGraphSLAM_uncertainty_calculator.cpp
